# client

./: .env.sample  pyproject.toml
src/client/: main.py
